--- a/2_process_data/nextflow_environment.yml
+++ b/2_process_data/nextflow_environment.yml
@@ -119,6 +119,7 @@ dependencies:
   - nbformat=5.3.0=py39h06a4308_0
   - ncurses=6.3=h7f8727e_2
   - nest-asyncio=1.5.5=py39h06a4308_0
+  - nextflow=20.01.0
   - notebook=6.4.11=py39h06a4308_0
   - numexpr=2.8.1=py39h6abb31d_0
   - numpy=1.21.5=py39he7a7128_2
