sra-tools update
The docker container had caused issues for us due to sra-tools configuration. It was configured as far as i can tell in the image. I think the requirement was removed on V3.0.1. This image uses the latest version of sra-tools and has worked without issues so far. It's built from this:

```FROM ayyuan/fasterq-dump:1.0

# Download, extract sratoolkit, and clean up.
RUN wget -q http://ftp-trace.ncbi.nlm.nih.gov/sra/sdk/current/sratoolkit.current-ubuntu64.tar.gz -O /tmp/sratoolkit.tar.gz \
    && tar -xzf /tmp/sratoolkit.tar.gz -C /opt \
    && rm -r /tmp/sratoolkit.tar.gz /opt/sratoolkit.3.0.0-ubuntu64

# Set the PATH environment variable.
ENV PATH="/opt/sratoolkit.3.1.1-ubuntu64/bin/:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"

# Set the default command to run
CMD ["bash"]```

--- a/2_process_data/conf/docker.config
+++ b/2_process_data/conf/docker.config
@@ -5,7 +5,7 @@ docker {
 
 process {
     withLabel: fastq {
-        container = "ayyuan/fasterq-dump:1.0"
+        container = "meono/fasterq-dump:1.1"
     }
 
     withLabel: trim_galore {
